# NSUT_Captcha

./: .gitignore  LICENSE  README.md  app.py  backend.py  pyproject.toml  training_utils.py
assets/: style.css
captcha_predictor/: __init__.py
captcha_predictor/adapters/: __init__.py  ims_captcha_client.py  model_loader.py
captcha_predictor/api/: __init__.py  predict.py
captcha_predictor/core/: __init__.py  vision.py
captcha_predictor/schemas/: inference.py
captcha_predictor/services/: __init__.py  dataset_service.py  inference_service.py  predict_service.py  training_utils.py
captcha_predictor/utils/: logging.py
docs/: USAGE.md
my_dir/cap_v3/trial_1/: checkpoint.weights.h5
nsut_captcha/: __init__.py  logging_config.py
nsut_captcha/adapters/: __init__.py  ims_captcha_client.py  model_loader.py
nsut_captcha/app/: main.py
nsut_captcha/config/: settings.py
nsut_captcha/core/: __init__.py
nsut_captcha/schemas/: __init__.py
nsut_captcha/services/: __init__.py  dataset_service.py  inference_service.py  training_utils.py
nsut_captcha/ui/: __init__.py  streamlit_app.py
nsut_captcha/utils/: __init__.py
tests/: test_public_api.py
